<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_erase"
        android:orderInCategory="101"
        android:title="@string/action_erase"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_undo"
        android:orderInCategory="102"
        android:title="@string/action_undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_redo"
        android:orderInCategory="103"
        android:title="@string/action_redo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="104"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom" />
</menu>