<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.gcacace.signaturepad.MainActivity">


    <RelativeLayout
        android:id="@+id/signature_pad_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttons_container">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/signature_pad_description"
            android:layout_marginBottom="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/signature_pad_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/agreement"
            android:textColor="@android:color/darker_gray" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signature_pad"
            app:clearOnDoubleClick="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/clear_pad" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/save_signature" />
    </LinearLayout>

</RelativeLayout>